Prevent mobile address bar from covering bottom of chart, add comment about existing bug

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
   top: 0;
   left: 0;
   z-index: 1;
-  height: 100vh;
+  height: 100%;
   overflow-y: hidden;
 }
 
@@ -23,7 +23,7 @@ body {
   top: 0;
   left: 0;
   z-index: 0;
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   background-color: white;
   overflow-x: scroll;
